# xfmail

./: .env  .env.xfchat  .gitmodules  CREATE_DATABASE.sql  CREATE_XFCHAT_DATABASE.sql  Cargo.toml  POSTGRESQL_COMPLETE_PLAN.md  POSTGRESQL_IMPLEMENTATION_CHECKLIST.md  POSTGRESQL_IMPLEMENTATION_GUIDE.md  POSTGRESQL_MIGRATION_PLAN.md  POSTGRESQL_PLAN_OVERVIEW.md  POSTGRESQL_RISK_ASSESSMENT.md  TESTING.md  XFCHAT_SETUP_INSTRUCTIONS.md  add_friend_columns.sql  build.rs  check_data.sql  check_migrations.sql  check_tables.sql  clear_friends.bat  clear_friends.sql  debug_db_connection.rs  docker-compose.yml  fix_database.sql  reset_db.sql  start_test.bat  test_query.sql  test_xfchat_connection.rs
.github/workflows/: test.yml
migrations/: 20240105000000_comprehensive_schema.sql  20240105000000_xfchat_comprehensive_schema.sql
src/: lib.rs
src/backend/: main.rs  mod.rs  subscription.rs
src/backend/auth/: mod.rs  sessions.rs  users.rs
src/backend/auth/handlers/: login.rs  me.rs  mod.rs  signup.rs  types.rs
src/backend/chat/: db.rs  mod.rs  state.rs
src/backend/chat/handlers/: mod.rs  put.rs  subscription.rs  typing.rs
src/backend/collab/: handlers.rs  mod.rs  state.rs
src/backend/error/: conversion.rs  mod.rs  types.rs
src/backend/messaging/: db.rs  handlers.rs  message_sync.rs  mod.rs
src/backend/middleware/: auth.rs  mod.rs
src/backend/realtime/: broadcast.rs  mod.rs  subscription.rs
src/backend/routes/: api_routes.rs  chat_routes.rs  mod.rs  router.rs
src/backend/server/: config.rs  init.rs  mod.rs  state.rs
src/backend/subscription/: api.rs
src/debug/: mod.rs
src/egui_app/: auth.rs  braid_client.rs  config.rs  debug.rs  editing_demo.rs  local_auth.rs  main.rs  messaging_demo.rs  mod.rs  types.rs
src/egui_app/crdt/: agent.rs  contact_crdt.rs  conversation_crdt.rs  merger.rs  message_crdt.rs  mod.rs  serializer.rs  user_state_crdt.rs
src/egui_app/local_db/: contacts.rs  conversations.rs  messages.rs  mod.rs  schema.rs  schema.sql  sync.rs
src/egui_app/messaging/: braid_sync.rs  chat_area.rs  friend_api.rs  main_layout.rs  mod.rs  sidebar.rs  state.rs
src/egui_app/messaging/components/: chat_header.rs  contact_item.rs  contact_list.rs  friend_requests_panel.rs  input_bar.rs  message_bubble.rs  message_list.rs  mod.rs  search_bar.rs
src/egui_app/offline/: mod.rs  optimistic.rs  queue.rs  reconciliation.rs  retry.rs
src/egui_app/state/: mod.rs
src/egui_app/sync/: background.rs  conflict_resolver.rs  metrics.rs  mod.rs  network_monitor.rs  scheduler.rs  sync_state.rs
src/egui_app/theme/: colors.rs  mod.rs  styles.rs
src/egui_app/views/: auth_view.rs  debug_view.rs  landing_view.rs  mod.rs  xfmail_view.rs
src/shared/: crdt.rs  error.rs  event.rs  message.rs  mod.rs  version_bridge.rs
src/shared/config/: mod.rs
src/shared/messaging/: contact.rs  conversation.rs  friend_request.rs  message.rs  message_crdt.rs  mod.rs
tests/: README.md  lib.rs  mod.rs
tests/common/: assertions.rs  auth_helpers.rs  database.rs  mock_server.rs  mod.rs
tests/e2e/: app_suite.rs  mod.rs
tests/integration/: mod.rs
tests/integration/api/: auth_test.rs  chat_test.rs  mod.rs  stripe_test.rs  subscription_test.rs
tests/integration/database/: migrations_test.rs  mod.rs
tests/integration/realtime/: broadcast_test.rs  mod.rs
tests/property/: event_proptest.rs  message_proptest.rs  mod.rs  state_proptest.rs
